--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,6 @@ h1 {
 
 .wrapper {
   float: left;
-  width: 70%;
   height: 100%;
   max-height: 100%;
   position: relative;
@@ -96,10 +95,12 @@ h1 {
 .wyszukaj {
   padding-right: 30px;
   color: #656565;
-  right: 20px;
+  left: 840px;
+  width: 250px;
   background: url("../img/lupa.png") no-repeat;
   background-size: 20px;
-  background-position: right 7px center; }
+  background-position: right 7px center;
+  border: 1px #e4e4e4 solid; }
 
 .dodaj-wpis {
   left: 320px;
@@ -115,8 +116,15 @@ h1 {
     -o-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out; }
 
+.zaznacz-wszystkie {
+  left: 460px;
+  font-weight: bold;
+  color: #656565; }
+  .zaznacz-wszystkie:hover {
+    background-color: #f6f6f6; }
+
 .usun-wszystkie {
-  left: 480px;
+  left: 650px;
   font-weight: bold;
   color: #656565; }
   .usun-wszystkie i {
@@ -131,9 +139,9 @@ h1 {
     transition: all 0.2s ease-in-out; }
 
 .container {
-  top: 120px;
+  top: 140px;
   left: 200px;
-  height: calc(100% - 120px);
+  height: calc(100% - 140px);
   width: calc(100% - 200px);
   overflow: auto;
   position: relative; }
@@ -157,6 +165,8 @@ table {
       color: #858585; }
   table th, table td {
     padding: 11px 26px 11px 10px; }
+  table th, table td, table thead {
+    white-space: nowrap; }
 
 .quick-options {
   padding: 0;
@@ -252,23 +262,30 @@ input[type="date"]::-webkit-datetime-edit {
   -o-transition: width 0.2s ease-in-out;
   transition: width 0.2s ease-in-out; }
 
+.part-width {
+  width: 70%;
+  -webkit-transition: width 0.2s ease-in-out;
+  -moz-transition: width 0.2s ease-in-out;
+  -ms-transition: width 0.2s ease-in-out;
+  -o-transition: width 0.2s ease-in-out;
+  transition: width 0.2s ease-in-out; }
+
 .show {
-  opacity: 1;
-  -webkit-transition: opacity 0.2s ease-in-out;
-  -moz-transition: opacity 0.2s ease-in-out;
-  -ms-transition: opacity 0.2s ease-in-out;
-  -o-transition: opacity 0.2s ease-in-out;
-  transition: opacity 0.2s ease-in-out; }
+  width: 30%;
+  -webkit-transition: width 0.2s ease-in-out;
+  -moz-transition: width 0.2s ease-in-out;
+  -ms-transition: width 0.2s ease-in-out;
+  -o-transition: width 0.2s ease-in-out;
+  transition: width 0.2s ease-in-out; }
 
 .hide {
   width: 0px;
-  opacity: 0;
   overflow: hidden;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -ms-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out; }
+  -webkit-transition: width 0.2s ease-in-out;
+  -moz-transition: width 0.2s ease-in-out;
+  -ms-transition: width 0.2s ease-in-out;
+  -o-transition: width 0.2s ease-in-out;
+  transition: width 0.2s ease-in-out; }
 
 .clearfix:after {
   content: ".";
