--- a/templates/listy/listaWpisyRejestr3Template.html
+++ b/templates/listy/listaWpisyRejestr3Template.html
@@ -2,12 +2,12 @@
     <thead>
     <tr>
         <th class="clean"></th>
-        <th>Marka<i class="fa fa-sort"></i></th>
-        <th>Model<i class="fa fa-sort"></i></th>
-        <th>Numer rejestracyjny<i class="fa fa-sort"></i></th>
-        <th>Ubezpieczyciel<i class="fa fa-sort"></i></th>
-        <th class="termin1">Termin 1<i class="fa fa-sort"></i></th>
-        <th class="termin2">Termin 2<i class="fa fa-sort"></i></th>
+        <th>Marka3<i class="fa fa-sort"></i></th>
+        <th>Model3<i class="fa fa-sort"></i></th>
+        <th>Numer rejestracyjny3<i class="fa fa-sort"></i></th>
+        <th>Ubezpieczyciel3<i class="fa fa-sort"></i></th>
+        <th class="termin1">Termin 1zxcxcz<i class="fa fa-sort"></i></th>
+        <th class="termin2">Termin 2xzcxcz<i class="fa fa-sort"></i></th>
     </tr>
     </thead>
     <tbody id="asd">
