--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@ h1 {
       padding: 10px;
       color: #f16c1e; }
     .pagination li.active {
-      background-color: #f6f6f6; }
+      background-color: #ebebeb; }
 
 table {
   font-family: Arial;
