--- a/css/style.sass
+++ b/css/style.sass
@@ -197,7 +197,7 @@ h1
       padding: 10px
       color: $prim
     &.active
-      background-color: #f6f6f6
+      background-color: #ebebeb
 
 table
   //table-layout: fixed
