--- a/app/positions/views/positionListView.html
+++ b/app/positions/views/positionListView.html
@@ -1,3 +1,40 @@
+<table class="table table-responsive table-hover">
+    <col style="width:1%">
+    <col style="width:1%">
+    <col style="width:1%">
+    <col style="width:3%">
+    <col style="width:6%">
+    <col style="width:15%">
+    <col style="width:1%">
+    <thead>
+    <tr style="font-weight: bold;">
+        <th><input type="checkbox"></th>
+        <th>ID</th>
+        <th contenteditable="false">Marka</th>
+        <th>Model</th>
+        <th>Numer rejestracyjny</th>
+        <th>Opis</th>
+    </tr>
+    </thead>
+    <tbody ng-repeat="position in vm.positions" ui-view="main.positionState">
+    <tr>
+        <td width="20px"><input type="checkbox" ></td>
+        <td>{{ position.id }}</td>
+        <td contenteditable="false">{{ position.brand }}</td>
+        <td contenteditable="false">{{ position.model }}</td>
+        <td contenteditable="false">{{ position.registrationNumber }}</td>
+        <td contenteditable="false">{{ position.others }}</td>
+    </tr>
+    <tr ng-attr-id="{{ position.id }}" class="hide">
+        <td colspan="11" class="down">
+            <div class="check"><a href="#" class="check"><i class="fa fa-check"></i></a></div>
+        </td>
+    </tr>
+    </tbody>
+</table>
+
+
+
 <tr ng-repeat="position in vm.positions">
     <td width="20px"><input type="checkbox" id="{{ position.id }}"></td>
     <td>{{ position.id }}</td>
